--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Rails-stripe-membership-saas : An example Rails 3.2 app with recurring billing using Stripe for a membership or subscription site." />
+    <meta name="description" content="Rails Membership/Subscription/SaaS site with recurring billing using Stripe. Example application from the RailsApps project." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Rails-stripe-membership-saas</title>
+    <title>RailsApps &#183; Rails Membership Subscription or SaaS Site with Stripe</title>
   </head>
 
   <body>
@@ -18,56 +18,102 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RailsApps/rails-stripe-membership-saas">View on GitHub</a>
 
-          <h1 id="project_title">Rails-stripe-membership-saas</h1>
-          <h2 id="project_tagline">An example Rails 3.2 app with recurring billing using Stripe for a membership or subscription site.</h2>
+          <h1 id="project_title">Rails Membership/Subscription/SaaS Site</h1>
+          <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/RailsApps/rails-stripe-membership-saas/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/RailsApps/rails-stripe-membership-saas/tarball/master">Download this project as a tar.gz file</a>
             </section>
+            
+            <section id="header-links">
+              <ul class="quick-links">
+                <!-- add li for more links -->
+              </ul>
+            </div>
+            
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Own the Code. But Don't Write a Single Line.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>It's open source. Generate an app in minutes using an application template:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<pre>
+$ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rails-composer/master/composer.rb -T
+</pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>You get a complete membership site with recurring billing for your web startup.</p>
 
-<h3>Designer Templates</h3>
+<div align="center">
+<div class="imageBox">
+  <a href="https://github.com/RailsApps/rails-stripe-membership-saas/">Readme</a>
+  <br />
+  <a href="https://github.com/RailsApps/rails-stripe-membership-saas/"><img src="http://railsapps.github.com/images/readme.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="100"></a>
+</div>
+<div class="imageBox">
+  <a href="http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html">Tutorial</a>
+  <br />
+  <a href="http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html"><img src="http://railsapps.github.com/images/tutorial.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="120"></a>
+</div>
+</div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<div class="bs-links">
+  <ul class="quick-links">
+    <li class="tweet-btn">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://railsapps.github.com/rails-stripe-membership-saas/" data-count="horizontal" data-via="rails_apps" data-text="A ready-made Rails app for a web startup prelaunch site">Tweet</a>
+    </li>
+    <li class="follow-btn">
+      <a href="https://twitter.com/rails_apps" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @rails_apps</a>
+    </li>
+    <li>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=RailsApps&repo=rails-stripe-membership-saas&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
+    </li>
+    <li>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=RailsApps&repo=rails-stripe-membership-saas&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
+    </li>
+  </ul>
+</div>
 
-<h3>Rather Drive Stick?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  <div class="comments">
+    <p class="choices">Is this helpful? Your encouragement fuels the project. Please tweet or add a comment. Issues? Couldn't get something to work? It's best to <a href="http://github.com/RailsApps/rails-stripe-membership-saas/issues">open an issue on GitHub</a> so we can help you.</p>
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'railsapps'; // required: replace example with your forum shortname
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+  </div><!-- class="comments" -->
 
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+  </section>
+</div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Rails-stripe-membership-saas maintained by <a href="https://github.com/RailsApps">RailsApps</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">From the RailsApps Project. &#169; 2012 Daniel Kehoe. “College” symbol by Saman Bemel-Benrud, “Newspaper” symbol by The Noun Project, “Lecturer” symbol by Zbigniew Flakus, from The Noun Project.</p>
       </footer>
     </div>
 
+    <!-- javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+    <script src="assets/js/google-code-prettify/prettify.js"></script>
+
+    <!-- Analytics
+    ================================================== -->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
