--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RailsApps/rails-stripe-membership-saas">View on GitHub</a>
 
-          <h1 id="project_title">Rails Membership/Subscription/SaaS Site</h1>
+          <h1 id="project_title">Rails Membership Site</h1>
           <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
 
             <section id="downloads">
@@ -38,7 +38,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Own the Code. But Don't Write a Single Line.</h3>
+        <h3>Need a subscription or SaaS site? Don't write code that's already written.</h3>
 
 <p>It's open source. Generate an app in minutes using an application template:</p>
 
