revise index page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Need a subscription or SaaS site? Don't write code that's already written.</h3>
+        <h3>Don't write code that's already written.</h3>
 
 <p>It's open source. Generate an app in minutes using an application template:</p>
 
