--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rai
 <div class="bs-links">
   <ul class="quick-links">
     <li class="tweet-btn">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://railsapps.github.com/rails-stripe-membership-saas/" data-count="horizontal" data-via="rails_apps" data-text="A ready-made Rails app for a web startup prelaunch site">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://railsapps.github.com/rails-stripe-membership-saas/" data-count="horizontal" data-via="rails_apps" data-text="Share the love. Open source Rails membership site with Stripe billing.">Tweet</a>
     </li>
     <li class="follow-btn">
       <a href="https://twitter.com/rails_apps" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @rails_apps</a>
