add video to index page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/RailsApps/rails-stripe-membership-saas/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/RailsApps/rails-stripe-membership-saas/tarball/master">Download this project as a tar.gz file</a>
+              <iframe width="178" height="100" src="http://www.youtube.com/embed/tc_Gtpd7BWA?rel=0" frameborder="0" allowfullscreen></iframe>
             </section>
             
             <section id="header-links">
