add video to index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
 
             <section id="downloads">
-              <iframe width="267" height="150" src="http://www.youtube.com/embed/tc_Gtpd7BWA?rel=0" frameborder="0" allowfullscreen></iframe>
+
             </section>
             
             <section id="header-links">
@@ -53,6 +53,11 @@ $ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rai
   <br />
   <a href="https://github.com/RailsApps/rails-stripe-membership-saas/"><img src="http://railsapps.github.com/images/readme.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="100"></a>
 </div>
+
+<div class="imageBox">
+  <iframe width="267" height="150" src="http://www.youtube.com/embed/tc_Gtpd7BWA?rel=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
 <div class="imageBox">
   <a href="http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html">Tutorial</a>
   <br />
