--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section id="main_content" class="inner">
         <h3>Don't write code that's already written.</h3>
 
-<p>It's open source. Generate an app in minutes using an application template:</p>
+<p>It's open source on <a href="https://github.com/RailsApps/rails-stripe-membership-saas">GitHub</a>. Generate an app in minutes using an application template:</p>
 
 <pre>
 $ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rails-composer/master/composer.rb -T
