--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Rails Membership/Subscription/SaaS site with recurring billing using Stripe. Example application from the RailsApps project." />
+    <meta name="description" content="Ruby on Rails Membership/Subscription/SaaS site with recurring billing using Stripe. Example application from the RailsApps project." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>RailsApps &#183; Rails Membership Subscription or SaaS Site with Stripe</title>
+    <title>RailsApps &#183; Rails Membership/Subscription/SaaS Site with Stripe</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RailsApps/rails-stripe-membership-saas">View on GitHub</a>
 
-          <h1 id="project_title">Rails Membership Site</h1>
+          <h1 id="project_title">Ruby on Rails Membership Site</h1>
           <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
 
             <section id="downloads">
