--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RailsApps/rails-stripe-membership-saas">View on GitHub</a>
 
-          <h1 id="project_title">Ruby on Rails Membership Site</h1>
-          <h2 id="project_tagline">A Rails 3.2 application with recurring billing using Stripe.</h2>
+          <h1 id="project_title">Rails Membership Site with Stripe</h1>
+          <h2 id="project_tagline">A Ruby on Rails 3.2 application with recurring billing.</h2>
 
             <section id="downloads">
 
             </section>
-            
+
             <section id="header-links">
               <ul class="quick-links">
                 <!-- add li for more links -->
               </ul>
             </div>
-            
+
         </header>
     </div>
 
@@ -46,6 +46,7 @@ $ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rai
 </pre>
 
 <p>You get a complete membership site with recurring billing for your web startup.</p>
+<p>Do you prefer Recurly for billing? There's a <a href="https://github.com/RailsApps/rails-recurly-subscription-saas">rails-recurly-subscription-saas</a> application.</p>
 
 <div align="center">
 <div class="imageBox">
