update tutorial link

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ $ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rai
 </div>
 
 <div class="imageBox">
-  <a href="http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html">Tutorial</a>
+  <a href="https://tutorials.railsapps.org/rails-stripe-membership-saas">Tutorial</a>
   <br />
-  <a href="http://railsapps.github.com/tutorial-rails-stripe-membership-saas.html"><img src="http://railsapps.github.com/images/tutorial.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="120"></a>
+  <a href="https://tutorials.railsapps.org/rails-stripe-membership-saas"><img src="http://railsapps.github.com/images/tutorial.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="120"></a>
 </div>
 </div>
 
