--- a/index.html
+++ b/index.html
@@ -1,136 +1,14 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Ruby on Rails Membership/Subscription/SaaS site with recurring billing using Stripe. Example application from the RailsApps project." />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>RailsApps &#183; Rails Membership/Subscription/SaaS Site with Stripe</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RailsApps/rails-stripe-membership-saas">View on GitHub</a>
-
-          <h1 id="project_title">Rails Membership Site with Stripe</h1>
-          <h2 id="project_tagline">A Ruby on Rails 4.2 application with recurring billing.</h2>
-
-            <section id="downloads">
-
-            </section>
-
-            <section id="header-links">
-              <ul class="quick-links">
-                <!-- add li for more links -->
-              </ul>
-            </div>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Don't write code that's already written.</h3>
-
-<p>The <a href="https://github.com/RailsApps/rails-stripe-membership-saas">rails-stripe-membership-saas</a> application is on GitHub.</p>
-
-<p>Generate an app in minutes using an application template:</p>
-
-<pre>
-$ rails new rails-stripe-membership-saas -m https://raw.github.com/RailsApps/rails-composer/master/composer.rb -T
-</pre>
-
-<p>You get a complete membership site with recurring billing for your web startup.</p>
-
-<div align="center">
-<div class="imageBox">
-  <a href="https://github.com/RailsApps/rails-stripe-membership-saas/">Readme</a>
-  <br />
-  <a href="https://github.com/RailsApps/rails-stripe-membership-saas/"><img src="http://railsapps.github.com/images/readme.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="100"></a>
-</div>
-
-<div class="imageBox">
-  <iframe width="267" height="150" src="http://www.youtube.com/embed/tc_Gtpd7BWA?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<div class="imageBox">
-  <a href="https://tutorials.railsapps.org/rails-stripe-membership-saas">Tutorial</a>
-  <br />
-  <a href="https://tutorials.railsapps.org/rails-stripe-membership-saas"><img src="http://railsapps.github.com/images/tutorial.png" title="Rails Application for a Membership Subscription SaaS Site" alt="Rails Application for a Membership Subscription SaaS Site" height="100" width="120"></a>
-</div>
-</div>
-
-<div class="bs-links">
-  <ul class="quick-links">
-    <li class="tweet-btn">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://railsapps.github.com/rails-stripe-membership-saas/" data-count="horizontal" data-via="rails_apps" data-text="Share the love. Open source Rails membership site with Stripe billing.">Tweet</a>
-    </li>
-    <li class="follow-btn">
-      <a href="https://twitter.com/rails_apps" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @rails_apps</a>
-    </li>
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=RailsApps&repo=rails-stripe-membership-saas&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="112px" height="20px"></iframe>
-    </li>
-    <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=RailsApps&repo=rails-stripe-membership-saas&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="98px" height="20px"></iframe>
-    </li>
-  </ul>
-</div>
-
-
-  <div class="comments">
-    <p class="choices">Is this helpful? Your encouragement fuels the project. Please tweet or add a comment. Issues? Couldn't get something to work? It's best to <a href="http://github.com/RailsApps/rails-stripe-membership-saas/issues">open an issue on GitHub</a> so we can help you.</p>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'railsapps'; // required: replace example with your forum shortname
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-  </div><!-- class="comments" -->
-
-  </section>
-</div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">From the RailsApps Project. &#169; 2012 Daniel Kehoe. “College” symbol by Saman Bemel-Benrud, “Newspaper” symbol by The Noun Project, “Lecturer” symbol by Zbigniew Flakus, from The Noun Project.</p>
-      </footer>
-    </div>
-
-    <!-- javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-    <script src="assets/js/google-code-prettify/prettify.js"></script>
-
-    <!-- Analytics
-    ================================================== -->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-5109366-14");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=http://railsapps.github.io/">
+        <script type="text/javascript">
+            window.location.href = "http://railsapps.github.io/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, see the <a href='http://railsapps.github.io/'>RailsApps</a> site.
+    </body>
 </html>
